--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# exclude data from source control by default
+data/
+
 ## https://github.com/github/gitignore/blob/main/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
