feat: Add Mapillary Image downloader, add GeoPandas Parser, replace requirements.txt with dependencies in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,18 @@ authors = [{ name = "The American National Red Cross" }]
 classifiers = [
 ]
 
+dependencies = [
+  "folium",
+  "geopandas",
+  "mapclassify",
+  "matplotlib",
+  "numpy",
+  "ruff",
+  "requests",
+  "shapely",
+  "typer"
+]
+
 ## TOOLS ##
 
 [tool.ruff]
