--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,12 +23,11 @@ jobs:
           cache: "pip"
           cache-dependency-path: |
             pyproject.toml
-            requirements.txt
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install .
 
       - name: Lint package
         run: |
