fix: Parse GPKG in single function, ensure unique images

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,11 @@ dependencies = [
   "ruff",
   "requests",
   "shapely",
-  "typer"
+  "typer",
+  "pandas",
+  "geopy",
+  "tqdm",
+  "python-dotenv"
 ]
 
 ## TOOLS ##
