fix: Use stamina to retry images, add any caught exceptions to related fields in GeoDataFrame

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = [
   "tqdm",
   "python-dotenv", 
   "scikit-image", 
-  "opencv-python"
+  "opencv-python",
+  "stamina"
 ]
 
 ## TOOLS ##
