alphabetize new dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ classifiers = [
 dependencies = [
   "folium",
   "geopandas",
+  "h3pandas",
   "mapclassify",
   "matplotlib",
   "numpy",
@@ -30,7 +31,6 @@ dependencies = [
   "scikit-image", 
   "opencv-python",
   "stamina",
-  "h3pandas"
 ]
 
 ## TOOLS ##
